--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
         data-bs-ride="carousel">
         <div class="carousel-inner test-carru">
             <div class="carousel-item active">
-                <img src="src/carruheader1.jpg" class="d-block w-100 m-auto carrusel_img" alt="...">
+                <img src="src/hdefini1.jpg" class="d-block w-100 m-auto carrusel_img" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="src/carruheader6.jpg" class="d-block w-100 m-auto carrusel_img" alt="...">
+                <img src="src/hdefini2.jpg" class="d-block w-100 m-auto carrusel_img" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="src/carruheader5.jpg" class="d-block w-100 m-auto carrusel_img" alt="...">
+                <img src="src/hdefini3.jpg" class="d-block w-100 m-auto carrusel_img" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -397,12 +397,12 @@
         <!-- Grid Layout -->
         <div class="container-xxl mb-4 headline">
             <div class="contenedor">
-                <div class="imagen1"> <img src="src/carruheader1.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
-                <div class="imagen2"> <img src="src/carruheader2.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
-                <div class="imagen3"> <img src="src/imagen3.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
-                <div class="imagen4"> <img src="src/imagen3.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
-                <div class="imagen5"> <img src="src/imagen2.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
-                <div class="imagen6"> <img src="src/carruheader2.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
+                <div class="imagen1"> <img src="src/gimg1.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
+                <div class="imagen2"> <img src="src/gimg2.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
+                <div class="imagen3"> <img src="src/gimg3.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
+                <div class="imagen4"> <img src="src/gimg4.JPG" alt="" class="w-100 h-100 object-fit-cover"></div>
+                <div class="imagen5"> <img src="src/gimg5.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
+                <div class="imagen6"> <img src="src/gimg6.JPG" alt="" class="w-100 h-100 object-fit-cover"></div>
                 <div class="imagen7"> <img src="src/imagen1.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
                 <div class="imagen8"> <img src="src/imagen1.jpg" alt="" class="w-100 h-100 object-fit-cover"></div>
             </div>
@@ -436,7 +436,7 @@
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-5 ">
                 <h6 class="text-uppercase mb-3 fw-bold">CONTACTOS</h6>
                 <p><i class="fa-solid fa-house me-1"></i> San Cristobal,C/Orlando Martinez #3</p>
-                <p><i class="fa-solid fa-envelope me-1"></i> Lakuka280@gmail.com</p>
+                <p><i class="fa-solid fa-envelope me-1"></i>consolaproductionrc@gmail.com</p>
                 <p><i class="fa-solid fa-phone me-1"></i> +1 829-234-1234</p>
                 <p><i class="fa-solid fa-print me-1"></i> +1 787-122-3453</p>
 
@@ -453,13 +453,13 @@
                 </div>
 
                 <div class="col-md-5 col-lg-4 m-lg-0 text-center text-md-end">
-                    <a class="btn btn-outline-light m-2 text-secondary" role="button" href="#">
+                    <a class="btn btn-outline-light m-2 text-secondary" role="button" href="https://www.instagram.com/cprmediastudio/">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
                     <a class="btn btn-outline-light m-2 text-secondary" role="button" href="#">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a class="btn btn-outline-light m-2 text-secondary" role="button" href="#">
+                    <a class="btn btn-outline-light m-2 text-secondary" role="button" href="https://www.youtube.com/@cprstudios1557/featured">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                     <a class="btn btn-outline-light m-2 text-secondary" role="button" href="#">
