--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>CPR MEDIA</title>
     <link rel="stylesheet" href="owl.carousel.min.css">
     <link rel="stylesheet" href="owl.theme.default.min.css">
+    <link rel="icon" type="image/x-icon" href="cpr-media-logo.png">
 
     <!-- css animate library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -173,7 +174,10 @@
         data-bs-ride="carousel">
         <div class="carousel-inner test-carru">
             <div class="carousel-item active">
-                <img src="src/hdefini1.jpg" class="d-block w-100 m-auto carrusel_img" alt="...">
+
+                <div class="hero-img-1">
+                </div>
+               
             </div>
             <div class="carousel-item">
                 <img src="src/hdefini2.jpg" class="d-block w-100 m-auto carrusel_img" alt="...">
@@ -342,45 +346,45 @@
 
                     <div class="owl-carousel owl-theme text-center">
 
-                        <div class="item">
+                        <div class="item mx-2">
                             <div>
-                                <img src="src/imagen2.jpg" alt="">
+                                <iframe width="266" height="265" src="https://www.youtube.com/embed/zGFE90FGcMo" title="Samana video spot 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
 
                         <div class="item">
                             <div>
-                                <img src="src/imagen1.jpg" alt="">
+                                <iframe width="266" height="266" src="https://www.youtube.com/embed/tmhqhtyXXWU" title="Projecto airbnb spot 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
 
                         <div class="item">
                             <div>
-                                <img src="src/imagen2.jpg" alt="">
+                                <iframe width="266" height="266" src="https://www.youtube.com/embed/EDD6gR8sbmc" title="Security pro spot 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
 
                         <div class="item">
                             <div>
-                                <img src="src/imagen2.jpg" alt="">
+                                <iframe width="266" height="264" src="https://www.youtube.com/embed/2KXjxQTUdHw" title="Reel CPR MEDIA 2022" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
 
                         <div class="item">
                             <div>
-                                <img src="src/imagen3.jpg" alt="">
+                                <iframe width="266" height="264" src="https://www.youtube.com/embed/gEiqFN75PT8" title="HECHO EN CASA - LOS RAFO | MINI DOCUMENTAL CARNAVAL DE SAN CRISTÓBAL" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
 
                         <div class="item">
                             <div>
-                                <img src="src/imagen2.jpg" alt="">
+                                <iframe width="266" height="266" src="https://www.youtube.com/embed/3OHnI9EKG6o" title="JRM Nigua San cristobal" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
 
                         </div>
                         <div class="item">
                             <div>
-                                <img src="src/imagen1.jpg" alt="">
+                                <iframe width="266" height="266" src="https://www.youtube.com/embed/uQ_V8JYzdOQ" title="ACUERDO AYUNTAMIENTOS CHINA REPUBLICA DOMINICANA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
