--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
                 <form class="d-flex w-100 gap-3 justify-content-end">
                     <ul class="navbar-nav mb-3 mb-lg-0">
                         <li class="nav-item">
-                            <a style="    font-size: 13px;" class="nav-link active text-white" aria-current="page"
-                                href="#">REELS</a>
+                            <a style="font-size: 13px;" class="nav-link active text-white" aria-current="page"
+                                href="#reels">REELS</a>
                         </li>
                         <li class="nav-item">
-                            <a style="    font-size: 13px;" class="nav-link text-white" href="#">NOSOTROS</a>
+                            <a style="font-size: 13px;" class="nav-link text-white" href="#nosotros">NOSOTROS</a>
                         </li>
                     </ul>
                     <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-size: 12px;" type="button">CONTACT US</button>
@@ -199,7 +199,7 @@
 
 
 
-    <section
+    <section id="nosotros"
         style="background: linear-gradient(0deg, rgb(0 0 0) 0%, rgb(13 13 13) 40%, rgb(255 255 255 / 14%) 70%, rgb(36 36 36) 40%, rgb(0 0 0 / 25%) 100%);">
         <div class="container-xxl py-5 my-3">
             <div class="row d-flex justify-content-center">
@@ -329,7 +329,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="reels">
         <div class="container-xxl mt-5 mb-2 ">
             <div class="row headline">
                 <div class="col-12">
